src/test/ui/const-generics/unknown_adt.min.stderr
error[E0412]: cannot find type `UnknownStruct` in this scope
  --> $DIR/unknown_adt.rs:7:12
   |
LL |     let _: UnknownStruct<7>;
   |            ^^^^^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
